--- a/zlqy/index.html
+++ b/zlqy/index.html
@@ -62,8 +62,8 @@
             <div class="mapLabel">
                 <img src="images/labelmapWord.png">
             </div>
+            <div class="kuang"></div>
             <div class="mapContainer">
-                <div class="kuang"></div>
                 <div id="inner">
                     <i class="iconfont" id="oldlib">&#xe64f;</i>
                     <i class="iconfont" id="taiji">&#xe64f;</i>
@@ -80,6 +80,7 @@
                     <i class="iconfont" id="sijiao">&#xe64f;</i>
                     <i class="iconfont" id="sanjiao">&#xe64f;</i>
                     <i class="iconfont" id="bajiao">&#xe64f;</i>
+                    <i class="iconfont" id="chqs">&#xe64f;</i>
                     <div class="place" id="move">老图书馆</div>
                     <div class="suofang">
                         <div id="jia">
@@ -93,30 +94,32 @@
                         <div id="close">
                             <i class="clo">&#xe652;</i>
                         </div>
-                        <div class="picWhole">
+                        <div id="picWhole">
                             <div id="picCon"><!-- 图片轮播外框 -->
                                 <div id="pre"><i class="iconba">&#xe8b1;</i></div>
                                 <div id="next"><i class="iconba">&#xe624;</i></div>
                                 <div id="slider">
-                                    <div class="same"><img src="images/library.png"></div>
-                                    <div class="same"><img src="images/library.png"></div>
-                                    <div class="same"><img src="images/library.png"></div>
-                                    <div class="same"><img src="images/library.png"></div>
-                                    <div class="same"><img src="images/library.png"></div>
-                                    <div class="same"><img src="images/library.png"></div>
-                                    <div class="same"><img src="images/library.png"></div>
-                                    <div class="same"><img src="images/library.png"></div>
-                                    <div class="same"><img src="images/library.png"></div>
-                                    <div class="same"><img src="images/library.png"></div>
-                                    <div class="same"><img src="images/library.png"></div>
-                                    <div class="same"><img src="images/library.png"></div>
-                                    <div class="same"><img src="images/library.png"></div>
-                                    <div class="same"><img src="images/library.png"></div>
-                                    <div class="same"><img src="images/library.png"></div>
+                                    <div class="same"><img src="images/library.png" width="465px" height="187px"></div>
+                                    <div class="same"><img src="images/bajiao.png" width="465px" height="187px"></div>
+                                    <div class="same"><img src="images/bashiwan.png" width="465px" height="187px"></div>
+                                    <div class="same"><img src="images/erjiao.png" width="465px" height="187px"></div>
+                                    <div class="same"><img src="images/fengyu.png" width="465px" height="187px"></div>
+                                    <div class="same"><img src="images/xk.png" width="465px" height="187px"></div>
+                                    <div class="same"><img src="images/qrp.png" width="465px" height="187px"></div>
+                                    <div class="same"><img src="images/wudong.png" width="465px" height="187px"></div>
+                                    <div class="same"><img src="images/taiji.png" width="465px" height="187px"></div>
+                                    <div class="same"><img src="images/yif.png" width="465px" height="187px"></div>
+                                    <div class="same"><img src="images/newgate.png" width="465px" height="187px"></div>
+                                    <div class="same"><img src="images/chqs.png" width="465px" height="187px"></div>
+                                    <div class="same"><!-- <img src="images/library.png" width="465px" height="187px"> --></div>
+                                    <div class="same"><!-- <img src="images/library.png" width="465px" height="187px"> --></div>
+                                    <div class="same"><!-- <img src="images/library.png" width="465px" height="187px"> --></div>
+                                    <div class="same"><!-- <img src="images/library.png" width="465px" height="187px"> --></div>
                                 </div> 
                             </div>
-                            <div>
-                                <p id="biaoti"></p>
+                            <div class="enter">
+                                <p id="biaoti">老图书馆</p>
+                                <p id="pa">沉浸于书海，听不见一丝的声音，只剩知识在脑海里交响，喧腾。翻页，亦或是轻轻合拢，用不着辗转反侧，你所思所求，可都在这殿堂中。</p>
                             </div>
                         </div>
                     </div>
