--- a/zlqy/index.html
+++ b/zlqy/index.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
         </div>
-        <div class="mapWhole">
+        <div class="mapWhole"><!-- 地图 -->
             <div class="mapLabel">
                 <img src="images/labelmapWord.png">
             </div>
@@ -111,10 +111,10 @@
                                     <div class="same"><img src="images/yif.png" width="465px" height="187px"></div>
                                     <div class="same"><img src="images/newgate.png" width="465px" height="187px"></div>
                                     <div class="same"><img src="images/chqs.png" width="465px" height="187px"></div>
-                                    <div class="same"><!-- <img src="images/library.png" width="465px" height="187px"> --></div>
-                                    <div class="same"><!-- <img src="images/library.png" width="465px" height="187px"> --></div>
-                                    <div class="same"><!-- <img src="images/library.png" width="465px" height="187px"> --></div>
-                                    <div class="same"><!-- <img src="images/library.png" width="465px" height="187px"> --></div>
+                                    <div class="same"><img src="images/sanjiao.png" width="465px" height="187px"></div>
+                                    <div class="same"><img src="images/sijiao.png" width="465px" height="187px"></div>
+                                    <div class="same"><img src="images/laocao.png" width="465px" height="187px"></div>
+                                    <div class="same"><img src="images/shutu.png" width="465px" height="187px"></div>
                                 </div> 
                             </div>
                             <div class="enter">
