--- a/zengyu/html/strategy.html
+++ b/zengyu/html/strategy.html
@@ -92,19 +92,24 @@
 	        							</div>
 	        							<!-- 图片轮播 -->
 	        							<div class="sli_pic">
-	        								<div class="pic_block">
+	        								<div class="pic_block" style="background: url('../image/156.png');background-size: cover;background-repeat: no-repeat;">
 	        									<div>
-	        										<p>宿舍内景</p>
+	        										<p>1、5、6栋寝室内景</p>
 	        									</div>
 	        								</div>
-	        								<div class="pic_block">
+	        								<div class="pic_block" style="background: url('../image/四人间.png');background-size: cover;background-repeat: no-repeat;">
 	        									<div>
-	        										<p>宿舍内景</p>
+	        										<p>四人间寝室内景</p>
 	        									</div>
 	        								</div>
-	        								<div class="pic_block">
+	        								<div class="pic_block" style="background: url('../image/1516六人间.png');background-size: cover;background-repeat: no-repeat;">
 	        									<div>
-	        										<p>宿舍内景</p>
+	        										<p>15、16栋寝室内景</p>
+	        									</div>
+	        								</div>
+	        								<div class="pic_block" style="background: url('../image/19栋.png');background-size: cover;background-repeat: no-repeat;">
+	        									<div>
+	        										<p>19栋寝室内景</p>
 	        									</div>
 	        								</div>
 	        							</div>
@@ -117,45 +122,37 @@
 	        					<div class="room_word">
 	        						<hr style=" height:1px;border:none;border-top:2px dotted #e0e2d2; margin: 0; padding: 0;">
 	        						<p>
-	        							<span style="font-size: 16px; color: #fd9a52">本科生（不含留学生）宿舍：</span>
-	        							<span style="font-size: 14px;color: #d0ad80">20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍.</span>
+	        							<span style="font-size: 16px; color: #fd9a52">宿 &nbsp; 舍 &nbsp; 情 &nbsp; 况 ：</span>
+	        							<span style="font-size: 14px;color: #d0ad80">宿舍床铺的长宽大致为80cm*200cm，每栋宿舍的床会有略微的差别。</span>
 	        						</p>
 	        						<hr style=" height:1px;border:none;border-top:2px dotted #e0e2d2; margin: 0; padding: 0;">
-	        						<p>
-	        							<span style="font-size: 16px; color: #fd9a52">男 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 生 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 楼 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 栋：</span>
-	        							<span style="font-size: 14px;color: #d0ad80">20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋</span>
-	        						</p>
+	        						<p style="padding-left: 180px;font-size: 14px;color: #d0ad80">1、5、6是学校现存最老的寝室。住宿条件比较差。今年1栋改为了研究生宿舍，5、6栋的4人间调整为3人间，而6人间调整</p>
 	        						<hr style=" height:1px;border:none;border-top:2px dotted #e0e2d2; margin: 0; padding: 0;">
-	        						<p>
-	        							<span style="font-size: 14px;color: #d0ad80; padding-left: 210px;">20栋宿舍</span>
-	        						</p>
+	        						<p style="font-size: 14px;color: #d0ad80">为了4人间，住宿空间较以前有了比较大的改善。整体情况是每层楼设有公用的卫生间、洗澡间，这也就意味着每个寝室都没有独立卫生间，没有</p>
 	        						<hr style=" height:1px;border:none;border-top:2px dotted #e0e2d2; margin: 0; padding: 0;">
-	        						<p>
-	        							<span style="font-size: 16px; color: #fd9a52">
-	        							<span style="font-size: 16px; color: #fd9a52">女 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 生 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 楼 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 栋：</span>
-	        							<span style="font-size: 14px;color: #d0ad80">20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋</span>
-	        						</p>
+	        						<p style="font-size: 14px;color: #d0ad80">阳台。处于校园中心，上课、生活都极其便利。</p>
 	        						<hr style=" height:1px;border:none;border-top:2px dotted #e0e2d2; margin: 0; padding: 0;">
-	        						<p>
-	        							<span style="font-size: 16px; color: #fd9a52">六&nbsp;&nbsp;&nbsp; 人&nbsp;&nbsp;&nbsp; 间 &nbsp;&nbsp;&nbsp;（&nbsp;价 &nbsp;格 &nbsp;）：</span>
-	        							<span style="font-size: 14px;color: #d0ad80"> 20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋</span>
-	        						</p>
+	        						<p style="padding-left: 180px;font-size: 14px;color: #d0ad80">8-12栋位于学校情人坡旁边，是学校标准的4人间，上床下桌，配有阳台，独立卫生间。楼栋周边环境一流，食堂与超市一应</p>
 	        						<hr style=" height:1px;border:none;border-top:2px dotted #e0e2d2; margin: 0; padding: 0;">
-	        						<p>
-	        							<span style="font-size: 16px; color: #fd9a52">四&nbsp;&nbsp;&nbsp; 人&nbsp;&nbsp;&nbsp; 间 &nbsp;&nbsp;&nbsp;（&nbsp;价 &nbsp;格 &nbsp;）：</span>
-	        							<span style="font-size: 14px;color: #d0ad80"> 20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋</span>
-	        						</p>
+	        						<p style="font-size: 14px;color: #d0ad80">俱全，为学习生活提供不少的便利</p>
 	        						<hr style=" height:1px;border:none;border-top:2px dotted #e0e2d2; margin: 0; padding: 0;">
-	        						<p>
-	        							<span style="font-size: 16px; color: #fd9a52">皇&nbsp;&nbsp;家 &nbsp;&nbsp;1 &nbsp;&nbsp;5 &nbsp;&nbsp;6（价&nbsp; 格&nbsp;）：</span>
-	        							<span style="font-size: 14px;color: #d0ad80"> 20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋宿舍、20栋</span>
-	        						</p>
+	        						<p style="padding-left: 180px;font-size: 14px;color: #d0ad80">15-20栋分布在太极运动场的南边与东边。周边有学校的兴业院食堂及众多的超市、商铺，校车从这里穿过。寝室内部均设有</p>
 	        						<hr style=" height:1px;border:none;border-top:2px dotted #e0e2d2; margin: 0; padding: 0;">
-	        						<p>
-	        							<span style="font-size: 14px; color: #fd9a52">不同类型的男女寝室规模一样，全校均覆盖空调，除皇家156外均有独卫。</span>
-	        							
-	        						</p>
+	        						<p style="font-size: 14px;color: #d0ad80">独立卫生间，并在一些楼层设有洗衣机供大家使用，根据每栋宿舍不同，楼层不同分为4人间、6人间两种。4人间基本情况与8-12栋一样，而6人</p>
 	        						<hr style=" height:1px;border:none;border-top:2px dotted #e0e2d2; margin: 0; padding: 0;">
+	        						<p style="font-size: 14px;color: #d0ad80">间则是上下铺与上床下桌的混搭。</p>
+	        						<hr style=" height:1px;border:none;border-top:2px dotted #e0e2d2; margin: 0; padding: 0;">
+	        						<p style="padding-left: 180px;font-size: 14px;color: #d0ad80">22-24屹立于悠悠重邮高处，周边风景秀丽，无论冬夏，绿色永存，每至冬季，一旁还有腊梅香气飘来。楼栋门前不时还会有</p>
+	        						<hr style=" height:1px;border:none;border-top:2px dotted #e0e2d2; margin: 0; padding: 0;">
+	        						<p style="font-size: 14px;color: #d0ad80">校车等路过，其周边有“千喜鹤”、“好食基”、“红高粱”等食堂，还有重邮阳光超市、叮当超市、华生园等购物场所，交通便利，可以尽情满</p>
+	        						<hr style=" height:1px;border:none;border-top:2px dotted #e0e2d2; margin: 0; padding: 0;">
+	        						<p style="font-size: 14px;color: #d0ad80">足同学们的平日生活需求。此外，楼栋内部住宿条件优越，环境较好，22栋全部为4人间寝室，与8-12栋寝室情况基本一致）,23及24全部为6人间</p>
+	        						<hr style=" height:1px;border:none;border-top:2px dotted #e0e2d2; margin: 0; padding: 0;">
+	        						<p style="font-size: 14px;color: #d0ad80">寝室，且有独立的阳台、卫浴。25-32在学校的东南方向，周边分布有“千喜鹤”、“好食基”食堂。宿舍基本为6人间基本情况与22-24相同且有</p>
+	        						<hr style=" height:1px;border:none;border-top:2px dotted #e0e2d2; margin: 0; padding: 0;">
+	        						<p style="font-size: 14px;color: #d0ad80">且有独立的阳台、卫浴，床铺是上下铺与上床下桌的混搭。</p>
+	        						<hr style=" height:1px;border:none;border-top:2px dotted #e0e2d2; margin: 0; padding: 0;">
+
 	        					</div>
 	        				</div>
 	        				<!-- 必备清单 -->
