学长帮帮忙

--- a/zlqy/index.html
+++ b/zlqy/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>home</title>
+    <title>首页</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
@@ -23,7 +23,7 @@
                     <a href="#">游子攻略</a>
                     <a href="#">重邮风采</a>
                     <a href="#">邮子数据</a>
-                    <a href="#">学长帮帮忙</a>
+                    <a href="help.html">学长帮帮忙</a>
                     <a href="#">关于我们</a>
                     <span>
                         <p id="log">新生登录</p>
