学长帮帮忙

--- a/zlqy/help.html
+++ b/zlqy/help.html
@@ -20,9 +20,9 @@
             <img src="images/logo.png" height="46" width="190" alt=".">
             <div class="list">
                 <a href="index.html">首页</a>
-                <a href="#">游子攻略</a>
-                <a href="#">重邮风采</a>
-                <a href="#">邮子数据</a>
+                <a href="../zengyu/strategy.html">游子攻略</a>
+                <a href="../zhangyan/index.html">重邮风采</a>
+                <a href="../zengyu/new.html">迎新活动</a>
                 <a href="#" id="forth">学长帮帮忙</a>
                 <a href="#">关于我们</a>
                 <span>
