--- a/zlqy/help.html
+++ b/zlqy/help.html
@@ -16,24 +16,24 @@
         <img src="images/xbs.png" class="rier">
     </div>
     <nav><!-- 顶部导航栏 -->
-        <div class="navCon">
-            <img src="images/logo.png" height="46" width="190" alt=".">
-            <div class="list">
-                <a href="index.html">首页</a>
-                <a href="../zengyu/strategy.html">游子攻略</a>
-                <a href="../zhangyan/index.html">重邮风采</a>
-                <a href="../zengyu/new.html">迎新活动</a>
-                <a href="#" id="forth">学长帮帮忙</a>
-                <a href="#">关于我们</a>
-                <span>
-                    <p id="log">新生登录</p>
-                    <div id="mengban"><!-- 蒙版 -->
-                        <div id="signin"></div><!-- 登录框 -->
-                    </div>
-                </span>
+            <div class="navCon">
+                <img src="images/logo.png" height="46" width="190" alt=".">
+                <div class="list">
+                    <a href="index.html"  id="a1">首页</a>
+                    <a href="../zengyu/strategy.html" id="a2">游子攻略</a>
+                    <a href="../zhangyan/index.html" id="a3">重邮风采</a>
+                    <a href="../zengyu/" id="a4">迎新活动</a>
+                    <a href="help.html" id="a5" class="show">学长帮帮忙</a>
+                    <a href="#" id="a6">关于我们</a>
+                    <!-- <span>
+                        <p id="log">新生登录</p>
+                        <div id="mengban">
+                            <div id="signin"></div>
+                        </div>
+                    </span> -->
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
     <div class="time"><!-- 倒计时 -->
         <div class="timeCon">
             <div class="timer">
