--- a/zlqy/index.html
+++ b/zlqy/index.html
@@ -19,18 +19,18 @@
             <div class="navCon">
                 <img src="images/logo.png" height="46" width="190" alt=".">
                 <div class="list">
-                    <a href="index.html" class="show">首页</a>
-                    <a href="../zengyu/strategy.html">游子攻略</a>
-                    <a href="../zhangyan/index.html">重邮风采</a>
-                    <a href="../zengyu/">迎新活动</a>
-                    <a href="help.html">学长帮帮忙</a>
-                    <a href="#">关于我们</a>
-                    <span>
+                    <a href="index.html" class="show" id="a1">首页</a>
+                    <a href="../zengyu/strategy.html" id="a2">游子攻略</a>
+                    <a href="../zhangyan/index.html" id="a3">重邮风采</a>
+                    <a href="../zengyu/" id="a4">迎新活动</a>
+                    <a href="help.html" id="a5">学长帮帮忙</a>
+                    <a href="#" id="a6">关于我们</a>
+                    <!-- <span>
                         <p id="log">新生登录</p>
-                        <div id="mengban"><!-- 蒙版 -->
-                            <div id="signin"></div><!-- 登录框 -->
+                        <div id="mengban">
+                            <div id="signin"></div>
                         </div>
-                    </span>
+                    </span> -->
                 </div>
             </div>
         </nav>
@@ -59,6 +59,7 @@
             </div>
         </div>
         <div class="mapWhole"><!-- 地图 -->
+            <img src="images/yinying.png" id="yy">
             <div class="mapLabel">
                 <img src="images/labelmapWord.png">
             </div>
@@ -128,6 +129,7 @@
         </div>
         <div class="midContent">
             <div class="midContainer">
+                <img src="images/yingyin.png" id="yy1">
                 <div class="midTop"> <!-- 三个旗子 -->
                     <div class="topLabel" id="la1">
                         <img src="images/yzgl.png">
@@ -156,10 +158,8 @@
                     <div class="midCon">
                         <img src="images/chahua2.png">
                         <div class="pra" id="pra2">
-                            <p>无论是寻找志同道合的朋友，各专业</p>
-                            <p>男女比例，各专业就业情况，还是同</p>
-                            <p>年同日，同乡比例，寝室信息等等。</p>
-                            <p>你想要知道的，都在这里。</p>
+                            <p>这里有精彩的活动等待着各位萌新</p>
+                            <p>参与活动就有机会赢取精美奖品!</p>
                         </div>
                         <div class="button" id="button2">
                            <a href="#">了解更多</a>
@@ -179,15 +179,16 @@
                 </div>
             </div>
         </div>
-        <div class="sister"><!-- 学姐知道 -->
+        <div class="sister"><!-- 学长帮帮忙 -->
+            <!-- <img src="images/yy3.png" id="yy2"> -->
             <div class="sisContent">
                 <div class="sislabel"><!-- 小旗子 -->
-                    <img src="images/xjzd.png">
+                    <img src="images/helpword.png">
                 </div>
                 <div class="sisbot">
                     <div class="sispra">
                         <p>想了解更多关于学校的日常？想提前了解自己的专业？或者有其他方面的问题，</p>
-                        <p>想了解更多关于学校的日常？想提前了解自己的专业？或者有其他方面的问题，</p>
+                        <p>就来“学长帮帮忙”板块，学长学姐们都在这里，等待着你的提问。</p>
                         <div class="button" id="button2">
                             <a href="#">了解更多</a>
                        </div>
@@ -197,6 +198,7 @@
         </div>
         <div class="redrock"><!-- 关于我们 -->
             <div class="redContent">
+            <!-- <img src="images/yy3.png" id="yy3"> -->
                 <div class="redlabel"><!-- 小旗子 -->
                     <img src="images/about.png" id="ab">
                 </div>
